Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-17788

Crash when calling collectGarbage() after requesting arguments object of native context

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 4.7.4
    • 4.6.0
    • Qt Script
    • None
    • d4166fa6ce24b55b483f29e8ef447c0f63f0a30f

    Description

      The following snippet causes a crash:

      QScriptEngine eng;
      QScriptContext *ctx = eng.pushContext();
      ctx->argumentsObject();
      eng.collectGarbage();
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kenthans Kent Hansen (Inactive)
            kenthans Kent Hansen (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes